<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        tools:context=".DaggerVsKoin.dgr.DgrActivity">

    <EditText
            android:id="@+id/edtCity2"
            android:background="@drawable/edt_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/city"/>
    <EditText
            android:id="@+id/edtCountry2"
            android:background="@drawable/edt_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/country"/>
    <Button
            android:id="@+id/btnDagger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dhuhr_time"
            android:textSize="25sp"
            android:layout_marginBottom="25dp"
            android:padding="10dp"
            android:background="@drawable/btn_style"
            android:textColor="#ffffff"/>

    <TextView
            android:id="@+id/txtDagger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:background="#5BD32F2F"
            android:gravity="center"/>

</LinearLayout>