<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".MVVM.ViewActivity">

    <ImageView
            android:id="@+id/imgTime"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="15dp"
            android:scaleType="centerCrop" />

    <EditText
            android:id="@+id/edCity"
            android:hint="@string/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edt_style"
            android:textColorHint="#80D32F2F" />
    <EditText
            android:id="@+id/edCountry"
            android:hint="@string/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edt_style"
            android:textColorHint="#80D32F2F"
            android:layout_marginTop="5dp"/>

    <Button
            android:id="@+id/btnShow"
            android:text="@string/show_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:background="@drawable/btn_style"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/fajr"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>
            <TextView
                    android:id="@+id/txFajr"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#111111"
                    />
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80D32F2F"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/sunrise"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>
            <TextView
                    android:id="@+id/txSunrise"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#111111"
                    android:layout_marginBottom="3dp"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80D32F2F"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/dhuhr"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>
            <TextView
                    android:id="@+id/txDhuhr"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#111111"
                    android:layout_marginBottom="3dp"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80D32F2F"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/asr"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>
            <TextView
                    android:id="@+id/txAsr"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#111111"
                    android:layout_marginBottom="3dp"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80D32F2F"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/sunset"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>
            <TextView
                    android:id="@+id/txSunset"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#111111"
                    android:layout_marginBottom="3dp"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80D32F2F"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/maghrib"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>
            <TextView
                    android:id="@+id/txMaghrib"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#111111"
                    android:layout_marginBottom="3dp"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80D32F2F"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/isha"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>
            <TextView
                    android:id="@+id/txIsha"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#111111"
                    android:layout_marginBottom="3dp"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80D32F2F"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/imsak"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>
            <TextView
                    android:id="@+id/txImsak"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#111111"
                    android:layout_marginBottom="3dp"/>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#80D32F2F"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/midnight"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>
            <TextView
                    android:id="@+id/txMidnight"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#111111"
                    android:layout_marginBottom="3dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>